# rose-offline

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  lints.yml
rose-data/: Cargo.toml
rose-data-irose/: Cargo.toml
rose-data-irose/src/: ai_database.rs  animation_event_flags.rs  character_motion_database.rs  client_strings.rs  data_decoder.rs  effect_database.rs  item_database.rs  job_class_database.rs  lib.rs  motion_database.rs  npc_database.rs  quest_database.rs  skill_database.rs  skybox_database.rs  sound_database.rs  status_effect_database.rs  string_database.rs  warp_gate_database.rs  zone_database.rs
rose-data-narose667/: Cargo.toml
rose-data-narose667/src/: character_motion_database.rs  item_database.rs  lib.rs  quest_database.rs  status_effect_database.rs  warp_gate_database.rs
rose-data/src/: ability.rs  animation_event_flags.rs  character_motion_database.rs  character_motion_list.rs  clan.rs  client_strings.rs  data_decoder.rs  effect_database.rs  item.rs  item_database.rs  job_class_database.rs  lib.rs  motion_database.rs  motion_file_data.rs  npc_database.rs  quest_database.rs  skill_database.rs  skybox_database.rs  sound_database.rs  status_effect_database.rs  string_database.rs  warp_gate_database.rs  zone_database.rs  zone_list.rs
rose-file-readers/: Cargo.toml
rose-file-readers/src/: aip.rs  aruavfs.rs  chr.rs  con_.rs  eft.rs  him.rs  id.rs  ifo.rs  irosephvfs.rs  lib.rs  lit.rs  ltb.rs  ptl.rs  qsd.rs  reader.rs  stb.rs  stl.rs  til.rs  titanvfs.rs  tsi.rs  types.rs  vfs.rs  virtual_filesystem.rs  writer.rs  zmd.rs  zmo.rs  zms.rs  zon.rs  zsc.rs
rose-game-common/: Cargo.toml
rose-game-common/src/: lib.rs
rose-game-common/src/components/: ability_values.rs  basic_stats.rs  character_delete_time.rs  character_info.rs  clan.rs  client_entity.rs  command.rs  destination.rs  equipment.rs  experience_points.rs  health_points.rs  hotbar.rs  inventory.rs  item_drop.rs  level.rs  mana_points.rs  mod.rs  move_mode.rs  move_speed.rs  npc.rs  position.rs  quest_state.rs  skill_list.rs  skill_points.rs  stamina.rs  stat_points.rs  status_effects.rs  target.rs  team.rs  union_membership.rs
rose-game-common/src/data/: ability.rs  drop_table.rs  mod.rs  password.rs
rose-game-common/src/messages/: client.rs  mod.rs  server.rs
rose-game-irose/: Cargo.toml
rose-game-irose/src/data/: ability_values.rs  drop_table.rs  mod.rs
rose-network-common/: Cargo.toml
rose-network-common/src/: connection.rs  lib.rs  packet.rs
rose-network-irose/: Cargo.toml
rose-network-irose/src/: common_packets.rs  game_client_packets.rs  game_server_packets.rs  lib.rs  login_server_packets.rs  packet_codec.rs  world_client_packets.rs  world_server_packets.rs
rose-network-narose667/: Cargo.toml
rose-network-narose667/src/: common_packets.rs  game_client_packets.rs  game_server_packets.rs  lib.rs  login_client_packets.rs  login_server_packets.rs  packet_codec.rs  world_client_packets.rs  world_server_packets.rs
rose-offline-server/: Cargo.toml
rose-offline-server/src/: main.rs
rose-offline-server/src/game/: game_world.rs  mod.rs
rose-offline-server/src/game/bots/: bot_accept_party_invite.rs  bot_attack_nearby.rs  bot_attack_target.rs  bot_attack_threat.rs  bot_find_monster_spawn.rs  bot_find_nearby_target.rs  bot_join_zone.rs  bot_pickup_item.rs  bot_revive.rs  bot_send_party_invite.rs  bot_sit_recover_hp.rs  bot_snowball_ai.rs  bot_snowball_fight.rs  bot_use_attack_skill.rs  bot_use_buff_skill.rs  create_bot.rs  mod.rs
rose-offline-server/src/game/bundles/: ability_values.rs  entity.rs  mod.rs  skill_list.rs  skill_use.rs  skills.rs
rose-offline-server/src/game/components/: account.rs  bank.rs  bot_ai.rs  character_list.rs  client_entity.rs  client_entity_visibility.rs  command.rs  cooldowns.rs  damage_sources.rs  event_object.rs  game_client.rs  login_client.rs  mod.rs  monster_spawn_point.rs  next_command.rs  object_variables.rs  owner.rs  party.rs  party_membership.rs  weight.rs  world_client.rs
rose-offline-server/src/game/events/: bank_event.rs  chat_command_event.rs  clan_event.rs  damage_event.rs  equipment_event.rs  item_life_event.rs  mod.rs  npc_store_event.rs  party_event.rs  personal_store_event.rs  pickup_item_event.rs  quest_trigger_event.rs  revive_event.rs  reward_item_event.rs  reward_xp_event.rs  save_event.rs  skill_event.rs  use_ammo_event.rs  use_item_event.rs
rose-offline-server/src/game/messages/: mod.rs
rose-offline-server/src/game/resources/: control_channel.rs  game_data.rs  login_tokens.rs  mod.rs  server_list.rs  server_time.rs  world_rates.rs  world_time.rs  zone_list.rs
rose-offline-server/src/game/storage/: account.rs  bank.rs  character.rs  clan.rs
rose-offline-server/src/game/systems/: ability_values_update_npc_system.rs  bank_system.rs  bot_ai_system.rs  chat_commands_system.rs  clan_system.rs  client_entity_visibility_system.rs  command_system.rs  control_server_system.rs  damage_system.rs  driving_time_system.rs  equipment_event_system.rs  experience_points_system.rs  expire_time_system.rs  game_server_system.rs  item_life_system.rs  login_server_system.rs  mod.rs  monster_spawn_system.rs  npc_ai_system.rs  npc_store_system.rs  party_system.rs  passive_recovery_system.rs  personal_store_system.rs  pickup_item_system.rs  quest_system.rs  revive_event_system.rs  reward_item_system.rs  save_system.rs  skill_effect_system.rs  startup_clans_system.rs  status_effect_system.rs  update_motion_data_system.rs  update_position_system.rs  use_ammo_system.rs  use_item_system.rs  weight_system.rs  world_server_system.rs  world_time_system.rs
rose-offline-server/src/irose/: mod.rs
rose-offline-server/src/irose/data/: character_creator.rs  mod.rs
rose-offline-server/src/irose/protocol/: game_server.rs  login_server.rs  world_server.rs
rose-offline-server/src/protocol/: mod.rs  server.rs
rose-offline-tools/rose-conv/: Cargo.toml
rose-offline-tools/rose-conv/src/: main.rs
rose-offline-tools/rose-vfs-dump/: Cargo.toml
src/: lib.rs  main.rs
src/data/: ability.rs  account.rs  ai_database.rs  (+15 more)
(+272 files in other folders)
