[package]
name = "rose-offline"
version = "0.1.0"
authors = ["James Benton <james.benton2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
async-trait = "0.1"
bevy_ecs = { version = "0.6" }
bitvec = { version = "1.0", features = ["serde"] }
bytes = "1.1"
chrono = "0.4"
clap = "3.1"
crossbeam-channel = "0.5"
directories = "4.0"
encoding_rs = "0.8"
enum-map = { version = "2.0", features = ["serde"] }
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
memmap = "0.7"
modular-bitfield = "0.11"
nalgebra = { version = "0.25", features = ["serde-serialize"] }
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8"
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.11"
sha2 = "0.10"
shellwords = "1.1"
tempfile = "3.3"
tokio = { version = "1.17", features = ["full"] }
rose-data = { path = "rose-data" }
rose-data-irose = { path = "rose-data-irose" }
rose-file-readers = { path = "rose-file-readers" }
rose-game-common = { path = "rose-game-common" }
rose-game-irose = { path = "rose-game-irose" }

[workspace]
members = [
    "rose-data",
    "rose-data-irose",
    "rose-file-readers",
    "rose-game-common",
    "rose-game-irose",
]

[profile.dev.package."*"]
opt-level = 3
