[package]
name = "rose-data-irose"
version = "0.1.0"
authors = ["James Benton <james.benton2@gmail.com>"]
edition = "2021"

[dependencies]
arrayvec = "0.7"
bevy = { version = "0.8.0-dev", default-features = false }
enum-map = { version = "2.0", features = ["serde"] }
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rose-data = { path = "../rose-data" }
rose-file-readers = { path = "../rose-file-readers" }
