[package]
name = "rose-data-irose"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
rose-data = { path = "../rose-data" }
rose-file-readers = { path = "../rose-file-readers" }
anyhow = { workspace = true }
arrayvec = { workspace = true }
bevy = { workspace = true }
enum-map = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
