[package]
name = "rose-data"
version = "0.1.0"
authors = ["James Benton <james.benton2@gmail.com>"]
edition = "2021"

[dependencies]
arrayvec = "0.7"
enum-map = { version = "2.0", features = ["serde"] }
num-derive = "0.3"
nalgebra = { version = "0.25", features = ["serde-serialize"] }
rose-file-readers = { path = "../rose-file-readers" }
serde = { version = "1.0", features = ["derive"] }

