[package]
name = "rose-file-readers"
version = "0.1.0"
authors = ["James Benton <james.benton2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
bytes = "1.1"
encoding_rs = "0.8"
log = "0.4"
memmap = "0.7"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
