[package]
name = "rose-network-common"
version = "0.1.0"
authors = ["James Benton <james.benton2@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.1"
crossbeam-channel = "0.5"
encoding_rs = "0.8"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.17", features = ["net", "sync", "macros"] }
rose-game-common = { path = "../rose-game-common" }
