[package]
name = "rose-network-irose"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
rose-data = { path = "../rose-data" }
rose-data-irose = { path = "../rose-data-irose" }
rose-game-common = { path = "../rose-game-common" }
rose-network-common = { path = "../rose-network-common" }
bevy = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
modular-bitfield = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
