[package]
name = "rose-offline-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rose-data = { path = "../rose-data" }
rose-data-irose = { path = "../rose-data-irose" }
rose-file-readers = { path = "../rose-file-readers" }
rose-game-common = { path = "../rose-game-common" }
rose-game-irose = { path = "../rose-game-irose" }
rose-network-common = { path = "../rose-network-common" }
rose-network-irose = { path = "../rose-network-irose" }
anyhow.workspace = true
arrayvec.workspace = true
async-trait.workspace = true
bevy.workspace = true
bitvec.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
encoding_rs.workspace = true
enum-map.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
memmap.workspace = true
modular-bitfield.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shellwords.workspace = true
simplelog.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
